添加模板模式, 改造Java原生代码沙箱